--- a/index.htm
+++ b/index.htm
@@ -6,10 +6,10 @@
 
   <script type="text/javascript">
     let activities = [
-      {
-        "activity": "Test",
-        "max_end_time": new Date('Dec 7, 2021 15:30:30')
-      },
+      /*{
+       "activity": "Test",
+     "max_end_time": new Date('Dec 7, 2021 15:30:30')
+  },*/
       {
         "activity": "Opening Remarks",
         "max_end_time": new Date('Dec 9, 2021 12:58:00')
@@ -144,10 +144,10 @@
       <p id="counter"></p>
 
       <ul class="sessions">
-        <li id="test">
+        <!--<li id="test">
           <div class="time">12:45</div>
           <p>Test</p>
-        </li>
+        </li>-->
         <li id="opening_remarks">
           <div class="time">12:45</div>
           <p>Opening Remarks</p>
