update page title

--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+  <title>PXMAN2021 - Agenda Tracker</title>
   <link rel="stylesheet" href="main.css">
   <link rel="shortcut icon" type="image/jpg" href="icons8-countdown-clock-48.png"/>
 
