adding the google doc link

--- a/index.htm
+++ b/index.htm
@@ -141,6 +141,9 @@
     <div class="wrapper">
       <h1>Platform Extended Management Retreat</h1>
       <h2>Thu Dec,9 & Fri Dec,10</h2>
+      <p>
+        <a href="https://docs.google.com/document/d/1wqO7Y-aLlRxP0HZfJnbMH_K9Ut25aNRYnnblBGE61Uc/edit#heading=h.98pjzyg2s1l6" target="_blank">Agenda Google Doc</a>
+      </p>
       <button onclick="startTimer()">How much time left?</button>
       <p id="counter"></p>
 
