--- a/index.htm
+++ b/index.htm
@@ -176,7 +176,7 @@
           <div class="time">15:15</div>
           <p>Platform Vision and Strategy</p>
         </li>
-        <li id="maintenance team">
+        <li id="maintenance_team">
           <div class="time">16:00</div>
           <p>Maintenance Team: Who? Why? How?</p>
         </li>
