--- a/index.htm
+++ b/index.htm
@@ -117,11 +117,11 @@
         document.getElementById("counter").innerHTML = days + "d " + hours + "h " +
           minutes + "m " + seconds + "s till the end of the activity <strong>" + sorted_activities[0].activity+"</strong>";
 
-        document.getElementById(sorted_activities[0].activity.replace(" ", "_").toLowerCase()).style.border = "4px solid blue";
+        document.getElementById(sorted_activities[0].activity.replaceAll(" ", "_").toLowerCase()).style.border = "4px solid blue";
         // If the count down is finished, write some text
         if (distance < 0) {
           clearInterval(x);
-          document.getElementById(sorted_activities[0].activity.replace(" ", "_").toLowerCase()).style.border = null;
+          document.getElementById(sorted_activities[0].activity.replaceAll(" ", "_").toLowerCase()).style.border = null;
           document.getElementById("counter").innerHTML = "Time up! Next: " + sorted_activities[1].activity;
           document.getElementById('xyz').play();
 
