--- a/index.htm
+++ b/index.htm
@@ -208,7 +208,7 @@
         </li>
         <li id="lunch">
           <div class="time">12:55</div>
-          <p>Lunch</p>
+          <p>Lunch: Lasagna 🍝 </p>
         </li>
         <li id="pma2">
           <div class="time">13:55</div>
